--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.google.gms:google-services:4.3.3' // google-services plugin
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://maven.google.com"
+        } //Google's Maven repository
+        maven { url "https://jitpack.io" }
     }
 }
 
